Fixed food drain not working correctly and small tiny tiny thingymabobs :)))